Fix random page on mobile and start working on search

--- a/wikipedia/css/styles.css
+++ b/wikipedia/css/styles.css
@@ -39,6 +39,14 @@ h3 {
   text-decoration: none;
 }
 
+.intro-menu,
+.intro-menu:hover,
+.intro-menu:visited,
+.intro-menu:focus {
+  color: #6e84df;
+  text-decoration: none;
+}
+
 .command-prompt {
   padding-top: 30px;
 }
@@ -66,4 +74,14 @@ h3 {
 	position: absolute;
 	bottom: 0;
 	left: 0;
+}
+
+input,
+input:active,
+input:focus,
+input:visited {
+  background-color: #181818;
+  /*border-bottom-color: #fff;*/
+  border-style: solid;
+  color: #fff;
 }
